--- a/Proje/App/App.E-Ticaret/Views/Home/Index.cshtml
+++ b/Proje/App/App.E-Ticaret/Views/Home/Index.cshtml
@@ -1,37 +1,37 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
     ViewData["hero"] = "";
-
 }
 
+
 <!-- Categories Section Begin -->
-<section class="categories">
+<section class="categories py-5">
     <div class="container">
         <div class="row">
-            <div class="categories__slider owl-carousel">
-                <div class="col-lg-3">
+            <div class="categories__slider owl-carousel d-flex">
+                <div class="col-lg-3 col-md-6 mb-4">
                     <div class="categories__item set-bg" data-setbg="/Theme/img/categories/cat-1.jpg">
                         <h5><a href="#">Fresh Fruit</a></h5>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 mb-4">
                     <div class="categories__item set-bg" data-setbg="/Theme/img/categories/cat-2.jpg">
                         <h5><a href="#">Dried Fruit</a></h5>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 mb-4">
                     <div class="categories__item set-bg" data-setbg="/Theme/img/categories/cat-3.jpg">
                         <h5><a href="#">Vegetables</a></h5>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 mb-4">
                     <div class="categories__item set-bg" data-setbg="/Theme/img/categories/cat-4.jpg">
-                        <h5><a href="#">drink fruits</a></h5>
+                        <h5><a href="#">Drink Fruits</a></h5>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 mb-4">
                     <div class="categories__item set-bg" data-setbg="/Theme/img/categories/cat-5.jpg">
-                        <h5><a href="#">drink fruits</a></h5>
+                        <h5><a href="#">Drink Fruits</a></h5>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
     </div>
 </section>
 <!-- Categories Section End -->
-<!-- Featured Section Begin -->
+
 <section class="featured spad">
     <div class="container">
         <div class="row">
