--- a/Proje/App/App.E-Ticaret/Views/Shared/Partials/Header.cshtml
+++ b/Proje/App/App.E-Ticaret/Views/Shared/Partials/Header.cshtml
@@ -1,4 +1,5 @@
 ﻿<header class="header">
+
 <div class="header__top">
     <div class="container">
         <div class="row">
@@ -31,7 +32,12 @@
                             <a asp-controller="Auth" asp-action="Login" class="nav-link">
                                 <i class="fa fa-user"></i> Login
                             </a>
+                            <a asp-controller="Auth" asp-action="Register" class="nav-link register-link" style="position:relative; top:5px; left:10px;">
+                                <i class="fa fa-user-plus"></i> Register
+                            </a>
+                        
                         </div>
+
 
                 </div>
             </div>
