--- a/Proje/App/App.E-Ticaret/Views/Shared/Partials/Login.cshtml
+++ b/Proje/App/App.E-Ticaret/Views/Shared/Partials/Login.cshtml
@@ -1,5 +1,20 @@
-﻿<li class="nav-item">
-    <a asp-controller="Auth" asp-action="Login" class="nav-link">
-        <i class="fa fa-user"></i> Login
-    </a>
-</li>
+﻿@using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Authorization
+@using System.Security.Claims
+
+@if (User.Identity.IsAuthenticated)
+{
+    <div class="navbar-text">
+        Merhaba, @User.Identity.Name
+        <form method="post" asp-controller="Auth" asp-action="Logout" style="display:inline">
+            <button type="submit" class="btn btn-link">Çıkış</button>
+        </form>
+    </div>
+}
+else
+{
+    <div class="navbar-text">
+        <a asp-controller="Auth" asp-action="Login">Login</a> |
+        <a asp-controller="Auth" asp-action="Register">Register</a>
+    </div>
+}
