--- a/Proje/App/App.E-Ticaret/Views/Auth/Login.cshtml
+++ b/Proje/App/App.E-Ticaret/Views/Auth/Login.cshtml
@@ -5,12 +5,11 @@
 
 }
 
-
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 col-md-6 offset-md-4 position-relative" style="top: -500px;">
-            <!-- Yukarı taşıma -->
-            <h2 class="text-center">Login</h2> <!-- Login başlığı formun içinde olacak -->
+
+            <h2 class="text-center">Login</h2> 
             <form asp-controller="Auth" asp-action="Login" method="post">
                 <div class="form-group">
                     <label asp-for="Email"></label>
