--- a/Proje/App/App.E-Ticaret/Views/Cart/AddToCart.cshtml
+++ b/Proje/App/App.E-Ticaret/Views/Cart/AddToCart.cshtml
@@ -1,10 +1,36 @@
-﻿@model App.Data.Entities.ProductEntity
+﻿@model IEnumerable<App.Data.Entities.ProductEntity>
 
-<h1>@Model.Name</h1>
-<p>@Model.Description</p>
+@{
+    ViewData["Title"] = "Ürünleri Sepete Ekle";
+}
 
-<form method="post" asp-controller="Cart" asp-action="AddToCart">
-    <input type="hidden" name="productId" value="@Model.Id" />
-    <input type="number" name="quantity" value="1" min="1" />
-    <button type="submit">Sepete Ekle</button>
-</form>
+
+<div class="product-grid">
+    <div class="col-12 col-md-6 offset-md-4 position-relative" style="top: -500px;">
+        <h2 class="text-center">Ürün Listesi</h2>
+
+        <div class="row">
+            @foreach (var product in Model)
+            {
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="@product.Images.FirstOrDefault()?.Url ?? " /images/no-image.png""
+                             class="card-img-top" style="height:200px; object-fit:cover;" />
+                        <div class="card-body">
+                            <h5 class="card-title">@product.Name</h5>
+                            <p class="card-text">@product.Price.ToString("C")</p>
+
+                            <form asp-controller="Cart" asp-action="AddToCart" method="post">
+                                <input type="hidden" name="productId" value="@product.Id" />
+                                <input type="number" name="quantity" value="1" min="1"
+                                       class="form-control mb-2" style="width:80px; display:inline-block;" />
+                                <button type="submit" class="btn btn-success btn-sm">Sepete Ekle</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+
