--- a/Proje/App/App.E-Ticaret/Views/Auth/Register.cshtml
+++ b/Proje/App/App.E-Ticaret/Views/Auth/Register.cshtml
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="text-center">
-                    <button type="submit" class="btn btn-primary w-100">Kayıt Ol</button>
+                    <button type="submit" class="btn btn-primary w-100">Register</button>
                 </div>
             </form>
         </div>
